# acdh-baserow-pyutils

./: .coveragerc  .flake8  .gitignore  404.html  README.md  dev.env  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: docs.yml  pypi.yml  test.yml
acdh_baserow_pyutils/: __init__.py
acdh_baserow_utils/: __init__.py  utils.py
docs/: README.md  reference.md
reference/: index.html
src/acdh_baserow_pyutils/: __init__.py
tests/: __init__.py  batch_update.csv  config.py  test_baserow_client.py
